# aws-cpp-cognito-auth

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  aws-cpp-cognito-auth.sln  build.cmd
include/aws-cpp-cognito-auth/: Auth.hpp  Exception.hpp
src/aws-cpp-cognito-auth/: Auth.cpp  CMakeLists.txt  Srp.cpp  aws-cpp-cognito-auth.vcxproj  aws-cpp-cognito-auth.vcxproj.filters  awspp.cpp  packages.config
src/aws-cpp-cognito-auth-demo/: CMakeLists.txt  aws-cpp-cognito-auth-demo.cpp  aws-cpp-cognito-auth-demo.vcxproj  aws-cpp-cognito-auth-demo.vcxproj.filters  packages.config  stdafx.cpp  stdafx.h
src/aws-cpp-cognito-auth/include/: Base64.hpp  BigNumber.hpp  Crypt.hpp  Helpers.hpp  Srp.hpp
